task3-istio/gateway/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: ledger-gateway
  namespace: payments

spec:

  selector:
    istio: ingressgateway

  servers:

    - port:
        number: 443
        name: https
        protocol: HTTPS

      tls:
        mode: SIMPLE
        credentialName: ledger-tls

      hosts:
        - ledger.local
