task3-istio/gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: ledger-api
  namespace: payments

spec:

  hosts:
    - ledger.local

  gateways:
    - ledger-gateway

  http:

    - route:

        - destination:
            host: ledger-api
            port:
              number: 80
